--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
     "postcss": "^8.4.38",
